<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_page"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/main_time" />
        <item
            android:id="@+id/lunch_time"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/lunch" />
        <item
            android:id="@+id/travel_time"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/travel" />
        <item
            android:id="@+id/day_time"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/day_time" />
        <item
            android:id="@+id/work_time"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/work" />
        <item
            android:id="@+id/party_time"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/party" />
        <item
            android:id="@+id/sport_time"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/sport" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
