<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <!--toolbar 内容-->
    <android.support.design.widget.AppBarLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.design.widget.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:contentScrim="?attr/colorPrimary"
        app:titleEnabled="false">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="fill"
                    android:src="@drawable/zhutu001"
                    android:translationX="10dp"
                android:scaleX="1.5"
                android:scaleY="1.5"/>
        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:clipChildren="false"
            android:elevation="4dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        <android.support.design.widget.TabLayout
                    android:id="@+id/tablayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabMode="scrollable"
                    app:tabSelectedTextColor="@color/colorPrimaryDark">

                    <android.support.design.widget.TabItem
                        android:id="@+id/Tab_000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Tab_000" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/Tab_001"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Tab_001" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/Tab_002"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Tab_002" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/Tab_003"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Tab_003" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/Tab_004"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Tab_004" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/Tab_005"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Tab_005" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/Tab_006"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Tab_006" />
                </android.support.design.widget.TabLayout>

        </android.support.v7.widget.Toolbar>





    </android.support.design.widget.AppBarLayout>

    <!--主界面内容-->
    <include layout="@layout/content_main" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        app:srcCompat="@drawable/ic_add_white" />

</android.support.design.widget.CoordinatorLayout>