<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".DetailActivity">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    >

    <TextView
        android:id="@+id/date_show"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/Edit_Date"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/class_show"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/Edit_Class"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        />

    <ImageView
        android:id="@+id/image_view"
        android:src="@drawable/zhutu001"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/title_show"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        />

    <TextView
        android:id="@+id/content_show"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:gravity="start"
        android:hint="@string/Edit_MainWord"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        />


</LinearLayout>
</ScrollView>