<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:titleEnabled="false">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:contentDescription="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/zhutu004"
                    android:scaleType="centerCrop"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/titlename"
                    android:fontFamily="@font/xiukai"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/modify"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:padding="0dp"
                    android:background="#00000000"
                    android:layout_gravity="end"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon003" />

            </FrameLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/xiukai"
            android:textColor="@color/two_gray"
            android:text="@string/beautiful_sentence"
            android:textSize="10sp"
            />

        <TextView
            android:id="@+id/title_show"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/xiukai"
            android:layout_gravity="start"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/class_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/Edit_Class"
                android:fontFamily="@font/xiukai"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/date_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Edit_Date"
                android:fontFamily="@font/xiukai"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                />

        </LinearLayout>

        <View
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="start"
            android:background="#000000"
            android:layout_width="200dp">
        </View>

        <TextView
            android:id="@+id/content_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/xiukai"
            android:gravity="start"
            android:hint="@string/Edit_MainWord"
            android:layout_marginTop="20dp"
            android:lineSpacingMultiplier="1.5"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            />

        <ImageView
            android:id="@+id/image_view"
            android:src="@drawable/zhutu001"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/xiukai"
            android:textColor="@color/two_gray"
            android:text="@string/beautiful_sentence"
            android:textSize="10sp"
            />

    </LinearLayout>
</ScrollView>