<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/the_tongju"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="13dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        card_view:cardMaxElevation="5dp">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:baselineAligned="true">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/the_days"
            android:textSize="20sp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/the_sum"
            android:textSize="20sp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/class_sum"
            android:textSize="20sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/the_days"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/default_number"
            android:textSize="20sp">
        </TextView>
        <TextView
            android:id="@+id/the_moments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/default_number"
            android:textSize="20sp">
        </TextView>
        <TextView
            android:id="@+id/class_moments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/default_number"
            android:textSize="20sp">
        </TextView>
    </LinearLayout>

    </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/the_tongju">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>