<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:longClickable="true">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="3dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        card_view:cardMaxElevation="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/moment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/moment_category"
                android:layout_below="@+id/moment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="3dp"
                android:textSize="14sp" />

            <View
                android:id="@+id/moment_line"
                android:layout_height="1dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/moment_category"
                android:background="#000000"
                android:layout_width="40dp">
            </View>

            <ImageView
                android:id="@+id/moment_img"
                android:layout_below="@+id/moment_line"
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/app_name"
                android:adjustViewBounds="true"
                android:src="@drawable/zhutu001" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_below="@id/moment_img"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

            <Button
                android:id="@+id/moment_button_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_main_edit"
                android:textSize="12sp"
                android:layout_weight="0.5"
                android:background="@drawable/card_btn_bg" />

            <Button
                android:id="@+id/moment_button_share"
                android:layout_width="wrap_content"
                android:text="@string/button_main_share"
                android:layout_weight="0.5"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                android:background="@drawable/card_btn_bg" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>